syntax = "proto3";

package yandex.cloud.priv.organizationmanager.v1.console;

import "yandex/cloud/priv/oauth/claims.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/organizationmanager/v1/console;organizationmanager_console";
option java_outer_classname = "PCOGS";

service GroupService {
  rpc ListMembers (ListGroupMembersRequest) returns (ListGroupMembersResponse);
}

message ListGroupMembersRequest {
  string group_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2 [(value) = "0-1000"];
  string page_token = 3 [(length) = "<=100"];
  // Members listing filter.
  // Filter specs: https://wiki.yandex-team.ru/users/zdazzy/cloud/iam/service/console/objectfilter/
  string filter = 4 [(length) = "<=1000"];
}

message ListGroupMembersResponse {
  repeated GroupMember members = 1;
  string next_page_token = 2;

  message GroupMember {
    yandex.cloud.priv.oauth.SubjectClaims subject_claims = 1;
  }
}
