import "yweb/protos/orange.proto";

package NRealTime;

message TDocFactors {
    message TDocListsFactors {
        repeated string ListsNames = 11; // Deprecated
    }

    message TOrangeDocFactors {
        optional bool IsHTML                            = 1;
        optional uint32 Hops                            = 2 [default = 255];
        optional uint32 Language                        = 3;
        optional uint32 AddTime                         = 4;
        optional uint32 AddTimeFull                     = 5;
        optional uint32 HostSize                        = 6;
        optional uint32 HostAddTime                     = 7;
        optional TDocListsFactors DocListsFactors       = 8; // Deprecated, see DocListInfo
        optional uint32 LastExportTime                  = 9;
        optional uint32 PubTime                         = 10;
        optional uint32 HostLanguage                    = 11; // host language
        repeated NOrangeData.TDocListInfo DocListInfo   = 12;
        repeated NOrangeData.TExportRecord ExportStream = 13;
        repeated NOrangeData.TAttribute SearchAttribute = 14; // This attribute is being processed by Realtime Indexer to 
                                                              // be added to the search database together with the document.
                                                              // Can be then requested from Base Search to set markers.
    }

    message TSpiderInfo {
        optional fixed32 HttpModTime = 1;
        optional uint32 LastAccess = 2;
        optional uint32 HttpCode = 3;
        optional uint32 MimeType = 4;
        optional int32 Encoding = 5;
        optional uint32 Flags = 6;
    }

    message TLinkStat {
        optional uint32 Internal = 1; // not agregated links count
        optional uint32 External = 2;

        optional uint32 InternalAggregated = 3; // agregated links count
        optional uint32 ExternalAggregated = 4;
    }

    optional bool nNews = 1;
    optional bool nCatalog = 2;
    optional bool nShop = 3;
    optional bool IsBlog = 4;
    optional bool IsLJ = 5;
    optional bool IsLib = 6;
    optional bool IsForum = 7;
    optional bool IsObsolete = 8;
    optional bool ManualAdultness = 9;
    optional bool ManualNonAdultness = 10;
    optional bool HasPornoMenu = 11;
    optional bool IsCom = 12;
    optional bool IsUa = 13;
    optional bool IsRu = 14;
    optional bool UrlHasDigits = 15;
    optional bool IsWikipedia = 16;
    optional uint32 UrlLen = 17;
    optional bool nRoot = 18;
    optional TOrangeDocFactors OrangeDocFactors = 19;
    optional bool IsComm = 20;
    optional bool IsPorno = 21;
    optional bool IsSEO = 22;
    optional bool HasPayments = 23;
    optional bool IsUkr = 24;
    optional uint32 Adultness = 25;
    optional bool IsCommByKeywords = 26;
    optional bool IsMainPage = 27;
    optional bool IsUnreachable = 28;
    optional uint32 NumSlashes = 29; // num slashes in url
    optional uint32 UrlTrigrams = 30; // UrlTrigram factor (by Den++)
    optional TSpiderInfo SpiderInfo = 31;
    optional double PornoWeight = 32;
    optional TLinkStat LinkStat = 33;
}

