package NOxygen;

message TDocData {
        required uint32 Num = 1;
        required string Url = 2;
        required uint64 Crc = 3;
        optional uint32 LangRegion = 4;
        optional string RelCanonicalTarget = 5;
        required uint32 SourceId = 6;
        required uint32 LastAccess = 7;
        optional uint32 CrawlRank = 8;
        repeated uint32 Shingles = 9;
        required uint32 Size = 10;
        required uint32 HttpCode = 11;
        required uint32 HttpModTime = 12;
        required uint32 Mime = 13;
        required uint32 Charset = 14;
        required uint32 Language = 15;
        required uint32 Flags = 16;
        optional uint32 SimhashVersion = 17;
        optional uint64 Simhash = 18;
        optional uint32 SimhashDocLength = 19;
        optional uint32 SimhashTitleHash = 20;
        optional uint32 FileId = 21; // If records are stored in several files
        optional uint32 SequentialNum = 22;
};

message TGroupAttr {
    optional string Name = 1;
    optional string StrValue = 2; // For AttrGrName values
    optional sint32 I16Value = 3; // I16 AttrGrInt value
    optional sint32 I32Value = 4; // I32 AttrGrInt value
    optional sint64 I64Value = 5; // I64 AttrGrInt value
};

message TGroupAttrs {
    repeated TGroupAttr Attrs = 1;
};
